prevent tel: links from wrapping

--- a/_scss/_global.scss
+++ b/_scss/_global.scss
@@ -37,6 +37,7 @@ a {
   }
 
   &[href^="tel:"] {
+    white-space: nowrap;
     @include media(md) {
       color: inherit;
       text-decoration: none;
